# library-management-system

./: CMakeLists.txt  README.md  coursework.cpp  coursework.h  main.cpp
src/: book.cpp  book.h  catalogue.cpp  catalogue.h  entry.cpp  entry.h  entry_classified.h  film.cpp  film.h  main.cpp  music_album.cpp  music_album.h
